# Agentmesh

./: README.md  package.json  pnpm-lock.yaml  xmcp.config.ts
.github/workflows/: code-intelligence.yml
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
kestra/: agentmesh-code-intel.yml  docker-compose.yml
kestra/flows/: github-analysis.yaml
oumi/: judge.py  judge_config.yaml
reviews/: review_20251213_230247_cline_ts.md  review_20251213_230538_cline_ts.md  review_20251213_230606_cline_ts.md
scripts/: review.sh
src/lib/: cline.ts
src/tools/: agent-workflow.ts  cline-status.ts  code-task.ts  coderabbit-review.ts  explain-code.ts  fix-issues.ts  generate-docs.ts  generate-tests.ts  git-assist.ts  kestra-code-intel.ts  oumi-judge.ts  refactor.ts  review-code.ts  scaffold-project.ts  security-audit.ts  vercel-deploy.ts
