[package]
name = "agentmesh-desktop"
version = "0.1.0"
description = "AgentMesh Desktop - Local MCP Server with Cline CLI"
authors = ["AgentMesh"]
license = "MIT"
repository = "https://github.com/N-45div/Agentmesh"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
